--- a/.travis.yml
+++ b/.travis.yml
@@ -6,24 +6,24 @@ cache: npm
 
 install:
   - npm install
-  
+
 branches:
 only:
   - test-ci
-  
+
 script:
-  - docker pull michelleamesquita/cucumber-bdd-ci
-  - docker run -v $PWD/:/app/report/ michelleamesquita/cucumber-bdd-ci
+  - docker pull viniciusks13/bdd-test:latest
+  - docker run -v $PWD/:/app/report/ viniciusks13/bdd-test:latest
 
 # after_script:
 #   - bash ./telegram_notification.sh
-  
+
 after_success:
 
-  - ls  
+  - ls
   - chmod +x final_report.sh
   - . final_report.sh
-  
+
   - git init
   - git config user.name "Travis CI"
   - git config user.email "travis@travis.org"
@@ -32,6 +32,6 @@ after_success:
   - git push --force --quiet "https://${GITHUB_API_KEY}@${GH_REF}" main:gh-pages
   - echo $RESULT
   - bash ./telegram_notification.sh
-  
-  
-  
+
+
+
