--- a/.travis.yml
+++ b/.travis.yml
@@ -15,23 +15,23 @@ script:
   - docker pull viniciusks13/bdd-test:latest
   - docker run -v $PWD/:/app/report/ viniciusks13/bdd-test:latest
 
-# after_script:
-#   - bash ./telegram_notification.sh
-
-after_success:
-
-  - ls
-  - chmod +x final_report.sh
-  - . final_report.sh
-
-  - git init
-  - git config user.name "Travis CI"
-  - git config user.email "travis@travis.org"
-  - git add cucumber_report.html
-  - git commit -m "Deploy to GitHub Pages"
-  - git push --force --quiet "https://${GITHUB_API_KEY}@${GH_REF}" main:gh-pages
-  - echo $RESULT
+after_script:
   - bash ./telegram_notification.sh
+
+# after_success:
+
+#   - ls
+#   - chmod +x final_report.sh
+#   - . final_report.sh
+
+#   - git init
+#   - git config user.name "Travis CI"
+#   - git config user.email "travis@travis.org"
+#   - git add cucumber_report.html
+#   - git commit -m "Deploy to GitHub Pages"
+#   - git push --force --quiet "https://${GITHUB_API_KEY}@${GH_REF}" main:gh-pages
+#   - echo $RESULT
+#   - bash ./telegram_notification.sh
 
 
 
